--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,20 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>{{ page.title }}</title>
-  <link rel="stylesheet" href="/css/styles.css">
-</head>
-<body>
-  <header>
-    <h1>{{ page.title }}</h1> <!-- This displays the post title -->
-    <p><small>Published on {{ page.date | date: "%B %d, %Y" }}</small></p> <!-- Optional: Add the date -->
-  </header>
-  <main>
-    {{ content }} <!-- This renders the content of the post -->
-  </main>
-  <footer>
-    <p><small>&copy; 2025 Giorgio Bordoli</small></p>
-  </footer>
-</body>
-</html>
+---
+layout: default
+---
+
+<article class="max-w-2xl mx-auto p-6 bg-white shadow-lg rounded-lg">
+    <h1 class="text-3xl font-bold text-gray-900">{{ page.title }}</h1>
+    <p class="text-gray-600 text-sm">{{ page.date | date: "%B %d, %Y" }}</p>
+    <hr class="my-4">
+    <div class="mt-4 leading-relaxed text-gray-800">
+        {{ content }}
+    </div>
+</article>
